testsuite/poke.pkl/struct-types-diag-7.pk
/* { dg-do compile } */

/* Struct elements can't have duplicated names.
   Version with declarations.  */

type Packet = struct
 {
   string foo;
   long bar;
   var foo = 10;  /* { dg-error "" } */
 };
